# jpg

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hbck/jpg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/hbck/jpg/: MainActivity.kt
app/src/main/java/net/bither/util/: NativeUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hbck/jpg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
